force-app/main/default/objects/FS_Valid_Fill__c/FS_Valid_Fill__c.object-meta.xml
<CustomObject>
    <label>Valid Fill</label>
    <nameField>
        <displayFormat>VF-{0000}</displayFormat>
        <label>Valid Fill Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Valid Fill</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>