force-app/main/default/objects/FS_Valid_Fill__c/fields/Current_Valid_Fill_QTY__c.field-meta.xml
<CustomField>
    <fullName>Current_Valid_Fill_QTY__c</fullName>
    <label>Current Valid Fill QTY</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>