force-app/main/default/objects/FS_Valid_Fill__c/fields/Estimated_Conversion_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Conversion_Date__c</fullName>
    <label>Estimated Conversion Date</label>
    <type>Date</type>
</CustomField>