force-app/main/default/objects/FS_Valid_Fill__c/fields/FS_Activity_Comments__c.field-meta.xml
<CustomField>
    <fullName>FS_Activity_Comments__c</fullName>
    <label>Activity Comments</label>
    <type>TextArea</type>
</CustomField>