force-app/main/default/objects/FS_Valid_Fill__c/fields/FS_Cancel_Valid_Fill__c.field-meta.xml
<CustomField>
    <fullName>FS_Cancel_Valid_Fill__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Cancelled</label>
    <type>Checkbox</type>
</CustomField>