force-app/main/default/objects/FS_Valid_Fill__c/fields/FS_CCSAST_Comments__c.field-meta.xml
<CustomField>
    <fullName>FS_CCSAST_Comments__c</fullName>
    <label>CCAST Comments</label>
    <type>TextArea</type>
</CustomField>