force-app/main/default/objects/FS_Valid_Fill__c/fields/FS_Entering_COM__c.field-meta.xml
<CustomField>
    <fullName>FS_Entering_COM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>COM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Vailid_Fill</relationshipName>
    <type>Lookup</type>
</CustomField>