force-app/main/default/objects/FS_Valid_Fill__c/fields/FS_Headquarters__c.field-meta.xml
<CustomField>
    <fullName>FS_Headquarters__c</fullName>
    <formula>FS_Outlet__r.FS_Headquarters__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Headquarters</label>
    <type>Text</type>
</CustomField>