force-app/main/default/objects/FS_Valid_Fill__c/fields/FS_Installation__c.field-meta.xml
<CustomField>
    <fullName>FS_Installation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Installation</label>
    <referenceTo>FS_Installation__c</referenceTo>
    <relationshipLabel>Post Install Valid Fill</relationshipLabel>
    <relationshipName>Valid_Fill</relationshipName>
    <type>Lookup</type>
</CustomField>