force-app/main/default/objects/FS_Valid_Fill__c/fields/FS_Not_Apporved_Comments__c.field-meta.xml
<CustomField>
    <fullName>FS_Not_Apporved_Comments__c</fullName>
    <label>Not Approved Comments</label>
    <type>TextArea</type>
</CustomField>