force-app/main/default/objects/FS_Valid_Fill__c/fields/FS_Number_7000_ValidFill__c.field-meta.xml
<CustomField>
    <fullName>FS_Number_7000_ValidFill__c</fullName>
    <label># 7000S Dispensers requesting Valid Fill</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>