force-app/main/default/objects/FS_Valid_Fill__c/fields/FS_Number_9100_ValidFill__c.field-meta.xml
<CustomField>
    <fullName>FS_Number_9100_ValidFill__c</fullName>
    <label># 9100 Dispensers requesting Valid Fill</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>