force-app/main/default/objects/FS_Valid_Fill__c/fields/FS_Outlet__c.field-meta.xml
<CustomField>
    <fullName>FS_Outlet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Outlet</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Post-Install Valid Fill</relationshipLabel>
    <relationshipName>Vailid_Fill</relationshipName>
    <type>Lookup</type>
</CustomField>