force-app/main/default/objects/FS_Valid_Fill__c/fields/FS_Outlet_Dispenser__c.field-meta.xml
<CustomField>
    <fullName>FS_Outlet_Dispenser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Outlet Dispenser</label>
    <referenceTo>FS_Outlet_Dispenser__c</referenceTo>
    <relationshipLabel>Post Install Valid Fill</relationshipLabel>
    <relationshipName>Valid_Fill</relationshipName>
    <type>Lookup</type>
</CustomField>