force-app/main/default/objects/FS_Valid_Fill__c/fields/FS_PM__c.field-meta.xml
<CustomField>
    <fullName>FS_PM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PM</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>FS AC_P,FS PIC_P,FS Admin PM_P</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Valid_Fill</relationshipName>
    <type>Lookup</type>
</CustomField>