force-app/main/default/objects/FS_Valid_Fill__c/fields/FS_Requested_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Requested_Activity_Date__c</fullName>
    <formula>Estimated_Conversion_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requested Activity Date</label>
    <type>Date</type>
</CustomField>