force-app/main/default/objects/FS_Valid_Fill__c/fields/FS_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Scheduled_Date__c</fullName>
    <label>Scheduled Date</label>
    <type>Date</type>
</CustomField>