force-app/main/default/objects/FS_Valid_Fill__c/fields/FS_Scheduled_Time__c.field-meta.xml
<CustomField>
    <fullName>FS_Scheduled_Time__c</fullName>
    <label>Scheduled Time</label>
    <length>12</length>
    <type>Text</type>
</CustomField>