force-app/main/default/objects/FS_Valid_Fill__c/fields/FS_Service_Provider__c.field-meta.xml
<CustomField>
    <fullName>FS_Service_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Provider</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Vailid_Fill1</relationshipName>
    <type>Lookup</type>
</CustomField>