force-app/main/default/objects/FS_Valid_Fill__c/fields/FS_SP_Code__c.field-meta.xml
<CustomField>
    <fullName>FS_SP_Code__c</fullName>
    <formula>FS_Service_Provider__r.FS_SP_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SP Code</label>
    <type>Text</type>
</CustomField>