force-app/main/default/objects/FS_Valid_Fill__c/fields/FS_Valid_Fill_Conversion_Kits_to_Install__c.field-meta.xml
<CustomField>
    <fullName>FS_Valid_Fill_Conversion_Kits_to_Install__c</fullName>
    <label># Valid Fill Conversion Kits to Install</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>