force-app/main/default/objects/FS_Valid_Fill__c/fields/FS_Valid_Fill_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Valid_Fill_Effective_Date__c</fullName>
    <label>Valid Fill Effective Date</label>
    <type>Date</type>
</CustomField>