force-app/main/default/objects/FS_Valid_Fill__c/fields/FS_Valid_Fill_Instruction__c.field-meta.xml
<CustomField>
    <fullName>FS_Valid_Fill_Instruction__c</fullName>
    <label>Valid Fill Instruction</label>
    <type>TextArea</type>
</CustomField>