force-app/main/default/objects/FS_Valid_Fill__c/fields/FS_Valid_Fill_Setup_Complete__c.field-meta.xml
<CustomField>
    <fullName>FS_Valid_Fill_Setup_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Valid Fill Setup Complete?</label>
    <type>Checkbox</type>
</CustomField>