force-app/main/default/objects/FS_Valid_Fill__c/fields/FS_Valid_Fill_Status__c.field-meta.xml
<CustomField>
    <fullName>FS_Valid_Fill_Status__c</fullName>
    <formula>If( AND (Text( Valid_Fill_Request_Approval_Status__c )=&quot;Approved&quot; ,
 NOT (IsNull( FS_Scheduled_Date__c )),
 FS_Activity_Complete__c), &quot;5 Complete&quot;,

If( AND(Text( Valid_Fill_Request_Approval_Status__c )=&quot;Approved&quot; ,
NOT(IsNull(FS_Scheduled_Date__c))), &quot;4 Scheduled&quot;,

If( AND(Text( Valid_Fill_Request_Approval_Status__c )=&quot;Approved&quot; ,
IsNull(FS_Scheduled_Date__c)), &quot;3 Ready for Scheduling&quot;,

If(Text( Valid_Fill_Request_Approval_Status__c )=&quot;Not Approved&quot;, &quot;2 Request Not Approved&quot;,

If( FS_Entering_COM__c &lt;&gt;&quot;&quot;, &quot;1 Request Entered&quot;, &quot;&quot;)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valid Fill Status</label>
    <type>Text</type>
</CustomField>