force-app/main/default/objects/FS_Valid_Fill__c/fields/FS_WO__c.field-meta.xml
<CustomField>
    <fullName>FS_WO__c</fullName>
    <label>W/O #</label>
    <length>12</length>
    <type>Text</type>
</CustomField>