force-app/main/default/objects/FS_Valid_Fill__c/fields/of_SS_Dispensers_requesting_Valid_Fill__c.field-meta.xml
<CustomField>
    <fullName>of_SS_Dispensers_requesting_Valid_Fill__c</fullName>
    <label># of SS Dispensers requesting Valid Fill</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>