force-app/main/default/objects/FS_Valid_Fill__c/fields/Valid_Fill_Request_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Valid_Fill_Request_Approval_Status__c</fullName>
    <label>Valid Fill</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>