force-app/main/default/objects/FS_Valid_Fill__c/recordTypes/X7000_Series.recordType-meta.xml
<RecordType>
    <fullName>X7000_Series</fullName>
    <active>true</active>
    <label>7000</label>
</RecordType>