force-app/main/default/objects/FS_Valid_Fill__c/recordTypes/X8000_9000_Series.recordType-meta.xml
<RecordType>
    <fullName>X8000_9000_Series</fullName>
    <active>true</active>
    <label>8000 &amp; 9000 Series</label>
</RecordType>