force-app/main/default/objects/FS_Valid_Fill__c/recordTypes/X8000_Series.recordType-meta.xml
<RecordType>
    <fullName>X8000_Series</fullName>
    <active>true</active>
    <label>8000</label>
</RecordType>