force-app/main/default/objects/FS_Valid_Fill__c/recordTypes/X9000_Series.recordType-meta.xml
<RecordType>
    <fullName>X9000_Series</fullName>
    <active>true</active>
    <label>9000</label>
</RecordType>