force-app/main/default/objects/FS_Valid_Fill__c/recordTypes/X9100_Series.recordType-meta.xml
<RecordType>
    <fullName>X9100_Series</fullName>
    <active>true</active>
    <label>9100</label>
</RecordType>