force-app/main/default/objects/FS_Valid_Fill__c/validationRules/ValidFillEffDateMandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidFillEffDateMandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!ISBLANK( TEXT(Valid_Fill_Request_Approval_Status__c)),
ISBLANK(FS_Valid_Fill_Effective_Date__c))</errorConditionFormula>
    <errorDisplayField>FS_Valid_Fill_Effective_Date__c</errorDisplayField>
    <errorMessage>This Field is mandatory if you have &#39;Valid Fill&#39;</errorMessage>
</ValidationRule>